Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
 </code></pre>
 
 <h3>
+<a id="example-usage" class="anchor" href="#example-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example usage</h3>
+
+<p>python c1fapp-api-example.py -s <a href="http://www.google.com">www.google.com</a> -f test</p>
+
+<h3>
 <a id="what-are-the-restrictions-for-api-key-usage" class="anchor" href="#what-are-the-restrictions-for-api-key-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What are the restrictions for API key usage?</h3>
 
 <p>Depending on the subscription you have, the below (hard limit) restrictions apply on the API usage</p>
