Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 <p>We provide historic searches and the API is looking up to three months in the past from the time of query. So if an IPv4 address for example appeared in a feed two months ago, the search will still return this result. To make it easier for the end user or device to evaluate the result we suggest to look at the last time this entry appeared in the feeds. </p>
 
 <h3>
+<a id="example-usage" class="anchor" href="#example-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example usage</h3>
+
+<pre><code>python c1fapp-api-example.py -s projects.globaltronics.net
+</code></pre>
+
+<p><img src="https://raw.githubusercontent.com/EvoxComputing/c1fapp-api/master/Screen%20Shot%202016-05-07%20at%201.20.59%20PM.png" alt=""></p>
+
+<h3>
 <a id="use-the-api-interface" class="anchor" href="#use-the-api-interface" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use the API interface</h3>
 
 <p>REST API with JSON</p>
@@ -141,11 +149,6 @@
 ]
 
 </code></pre>
-
-<h3>
-<a id="example-usage" class="anchor" href="#example-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example usage</h3>
-
-<p>python c1fapp-api-example.py -s <a href="http://www.google.com">www.google.com</a> -f test</p>
 
 <h3>
 <a id="what-are-the-restrictions-for-api-key-usage" class="anchor" href="#what-are-the-restrictions-for-api-key-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What are the restrictions for API key usage?</h3>
