--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 <table>
 <thead>
 <tr>
-<th>First Header</th>
-<th>Second Header</th>
+<th>License</th>
+<th>API Limit</th>
 </tr>
 </thead>
 <tbody>
@@ -181,6 +181,7 @@
     </div>
     <footer>
       <p>Project maintained by <a href="https://github.com/EvoxComputing">EvoxComputing</a></p>
+      <p>Project contributed by <a href="https://github.com/gfek">Gfek</a></p>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
